# ReClass.NET-MCP

./: .gitignore  README.md  ReClassMCP.sln  build.ps1  mcp-config.json
.github/workflows/: build.yml
ReClassMCP.Plugin/: CommandHandler.cs  McpServer.cs  ReClassMCP.Plugin.csproj  ReClassMCPExt.cs
ReClassMCP.Plugin/Properties/: AssemblyInfo.cs
ReClassMCP.Server/: pyproject.toml  reclass_mcp_server.py
